--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 http://www.milfont.org
 
-rake gems:install RAILS_ENV=test
+sudo rake gems:install RAILS_ENV=test
 
 Para funcionar o Firefox com o Selenium
 sudo ln -s /usr/lib/firefox-3.0.4/firefox /usr/bin/firefox-bin
+
+Para um rede com proxy no linux, execute antes
+ export http_proxy=http://usuario:senha@192.168.0.254:3128
 
